--- a/abstract/_variables.scss
+++ b/abstract/_variables.scss
@@ -2,3 +2,29 @@ $color-bg: #0b0b0b;
 $color-dark: #2b2b2b;
 
 $color-font-white: #fffcf5;
+
+@keyframes animationTextShow {
+    from {
+        transform: translate3d(0, 100%, 0);
+        height: 0;
+        transition: .8s all;
+        opacity: .2;
+    }
+    to {
+        transform: translate3d(0, 0, 0);
+        transition: .8s all;
+        height: 100%;
+        opacity: 1;
+    }
+}
+
+@keyframes opacityHeadeer {
+    from {
+        opacity: 0;
+        transition: .8s all;
+    }
+    to {
+        opacity: 1;
+        transition: .8s all;
+    }
+}
