--- a/components/_contentmenuhamburger.scss
+++ b/components/_contentmenuhamburger.scss
@@ -1,22 +1,28 @@
 @import '../abstract/variables';
 
-
-  .mobileMenuContent {
+.mobileMenuContent {
     display: none;
 }
 
 .mobileMenuContent.ativo {
-    display: block;
-    height: 100%;
-    width: 100%;
-    background-color: #f3f3f3;
-    position: fixed;
-    top: 0;
-    z-index: 777;
-    animation: animationMenu .5s ease-in-out;
+  display: block;
+  height: 100vh;
+  width: 100%;
+  background-color: #f3f3f3;
+  position: fixed;
+  top: 0;
+  z-index: 777;
+  animation: animationMenu .5s ease-in-out;
 }
 
-
+@keyframes animationMenuClose {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  100% {
+    transform: translate3d(0, -100%, 0);
+  }
+}
 
 @keyframes animationMenu {
     from {
