--- a/components/_header.scss
+++ b/components/_header.scss
@@ -6,10 +6,12 @@ header {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        
         .titleprofile {
             display: flex;
             align-items: center;
             gap: 10px;
+            animation: opacityHeadeer 2s forwards;
             h1 {
                 font-weight: 800;
                 font-size: 3rem;
@@ -64,6 +66,7 @@ header {
             }
         }
         nav {
+            animation: opacityHeadeer 2s forwards;
             padding: 1.2rem 1.7rem;
             ul {
                 display: flex;
