--- a/components/_main.scss
+++ b/components/_main.scss
@@ -14,7 +14,7 @@ main {
             h1 {
                 font-size: 3rem;
                 font-weight: 600;
-                animation: animationTextShow 1.2s forwards;
+                animation: animationTextShow 2s forwards;
                 span {
                     font-size: 3rem;
                 }
@@ -23,16 +23,18 @@ main {
                 margin: 2rem 0rem 3rem 0rem;
                 max-width: 70ch;
                 font-size: 1rem;
-                animation: animationTextShow 1.7s forwards;
+                animation: animationTextShow 2.3s forwards;
             }
             .divmain {
                 display: flex;
                 align-items: center;
                 gap: 15px;
+                animation: animationTextShow 2.3s forwards;
                 .seeprojetos {
                     background-color: #181818;
                     padding: 1rem 2rem;
                     color: #fff;
+                    background-image: linear-gradient(rgba(255,255,255,.1), #0e0e0e00,#0e0e0e00, #0e0e0e00);
                 }
             }
             .textcircle {
