feat: menu content when active

--- a/components/_contentmenuhamburger.scss
+++ b/components/_contentmenuhamburger.scss
@@ -2,6 +2,108 @@
 
 .mobileMenuContent {
     display: none;
+    .divisorcontent {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 5rem 3rem;
+      nav {
+        text-align: right;
+        ul {
+          li {
+            animation: animationTextShow 2.3s forwards;
+            a {
+              font-size: 6rem;
+              margin: 15px 0;
+              color: $color-bg;
+              &:hover {
+                color: #5f5f5f;
+              }
+            }
+          }
+        }
+      }
+      .menubg {
+        color: $color-bg;
+        animation: animationTextShow 2.3s forwards;
+        .contact {
+          .namecelemail {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            h1 {
+              font-size: 1.3rem;
+              font-style: italic;
+              color: $color-bg;
+            }
+            .iconlink {
+              display: flex;
+              align-items: center;
+              gap: 15px;
+              a {
+                color: $color-bg;
+              }
+            }
+          }
+          .socialmedia {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            margin-top: 5rem;
+            .underline {
+              text-decoration: none;
+              color: #000;
+              position: relative;
+              span {
+                background-image: linear-gradient(0deg, #000000 0%, #000000 100%);
+                background-position: 100% 100%;
+                background-repeat: no-repeat;
+                background-size: var(--background-size, 100%) 1px;
+                transition: background-size .2s linear var(--background-delay, .15s);
+                font-size: 16px;
+                line-height: 20px;
+                transform: translateZ(0);
+                color: $color-bg;
+              }
+              svg {
+                vertical-align: top;
+                display: inline;
+                line-height: 1;
+                width: 13px;
+                height: 20px;
+                position: relative;
+                left: -2px;
+                fill: none;
+                stroke-linecap: round;
+                stroke-linejoin: round;
+                stroke-width: 1px;
+                stroke: #000000;
+                stroke-dasharray: 7.95 30;
+                stroke-dashoffset: var(--stroke-dashoffset, 46);
+                transition: stroke-dashoffset var(--stroke-duration, .15s) var(--stroke-easing, linear) var(--stroke-delay, 0s);
+              }
+              &:hover {
+                --background-size: 0%;
+                --background-delay: 0s;
+                --stroke-dashoffset: 26;
+                --stroke-duration: .3s;
+                --stroke-easing: cubic-bezier(.3, 1.5, .5, 1);
+                --stroke-delay: .195s;
+              }
+            }
+          }
+        }
+      .info {
+        padding-top: 5rem;
+        display: flex;
+        flex-direction: column;
+        p {
+          color: $color-bg;
+          max-width: 80ch;
+        }
+      }
+    }
+  }
 }
 
 .mobileMenuContent.ativo {
