--- a/styles/styles.css
+++ b/styles/styles.css
@@ -327,7 +327,7 @@ main .mainsize .textmain {
   margin-right: 3rem;
 }
 main .mainsize .textmain h1 {
-  font-size: 3rem;
+  font-size: 5rem;
   font-weight: 600;
   animation: animationTextShow 2s forwards;
 }
@@ -337,7 +337,7 @@ main .mainsize .textmain h1 span {
 main .mainsize .textmain p {
   margin: 2rem 0rem 3rem 0rem;
   max-width: 70ch;
-  font-size: 1rem;
+  font-size: 1.2rem;
   animation: animationTextShow 2.3s forwards;
 }
 main .mainsize .textmain .divmain {
@@ -460,6 +460,104 @@ header .headersize .menuhamburger.ativo .bar:nth-child(1) {
 }
 .mobileMenuContent {
   display: none;
+}
+.mobileMenuContent .divisorcontent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5rem 3rem;
+}
+.mobileMenuContent .divisorcontent nav {
+  text-align: right;
+}
+.mobileMenuContent .divisorcontent nav ul li {
+  animation: animationTextShow 2.3s forwards;
+}
+.mobileMenuContent .divisorcontent nav ul li a {
+  font-size: 6rem;
+  margin: 15px 0;
+  color: #0b0b0b;
+}
+.mobileMenuContent .divisorcontent nav ul li a:hover {
+  color: #5f5f5f;
+}
+.mobileMenuContent .divisorcontent .menubg {
+  color: #0b0b0b;
+  animation: animationTextShow 2.3s forwards;
+}
+.mobileMenuContent .divisorcontent .menubg .contact .namecelemail {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.mobileMenuContent .divisorcontent .menubg .contact .namecelemail h1 {
+  font-size: 1.3rem;
+  font-style: italic;
+  color: #0b0b0b;
+}
+.mobileMenuContent .divisorcontent .menubg .contact .namecelemail .iconlink {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.mobileMenuContent .divisorcontent .menubg .contact .namecelemail .iconlink a {
+  color: #0b0b0b;
+}
+.mobileMenuContent .divisorcontent .menubg .contact .socialmedia {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 5rem;
+}
+.mobileMenuContent .divisorcontent .menubg .contact .socialmedia .underline {
+  text-decoration: none;
+  color: #000;
+  position: relative;
+}
+.mobileMenuContent .divisorcontent .menubg .contact .socialmedia .underline span {
+  background-image: linear-gradient(0deg, #000000 0%, #000000 100%);
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: var(--background-size, 100%) 1px;
+  transition: background-size 0.2s linear var(--background-delay, 0.15s);
+  font-size: 16px;
+  line-height: 20px;
+  transform: translateZ(0);
+  color: #0b0b0b;
+}
+.mobileMenuContent .divisorcontent .menubg .contact .socialmedia .underline svg {
+  vertical-align: top;
+  display: inline;
+  line-height: 1;
+  width: 13px;
+  height: 20px;
+  position: relative;
+  left: -2px;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 1px;
+  stroke: #000000;
+  stroke-dasharray: 7.95 30;
+  stroke-dashoffset: var(--stroke-dashoffset, 46);
+  transition: stroke-dashoffset var(--stroke-duration, 0.15s) var(--stroke-easing, linear) var(--stroke-delay, 0s);
+}
+.mobileMenuContent .divisorcontent .menubg .contact .socialmedia .underline:hover {
+  --background-size: 0%;
+  --background-delay: 0s;
+  --stroke-dashoffset: 26;
+  --stroke-duration: .3s;
+  --stroke-easing: cubic-bezier(.3, 1.5, .5, 1);
+  --stroke-delay: .195s;
+}
+.mobileMenuContent .divisorcontent .menubg .info {
+  padding-top: 5rem;
+  display: flex;
+  flex-direction: column;
+}
+.mobileMenuContent .divisorcontent .menubg .info p {
+  color: #0b0b0b;
+  max-width: 80ch;
 }
 
 .mobileMenuContent.ativo {
