--- a/components/_main.scss
+++ b/components/_main.scss
@@ -1,7 +1,7 @@
 @import '../abstract/reset';
 
 main {
-    padding: 3rem 5rem;
+    padding: 9rem 5rem 5rem 5rem;
     .mainsize {
         padding: 9rem 0rem;
 
@@ -38,9 +38,9 @@ main {
                 }
             }
             .textcircle {
-                height: 150px;
+                height: 200px;
                 position: absolute;
-                top: 0%;
+                bottom: -30%;
                 right: 0%;
                 animation: rotateAnimation infinite 7s linear;
             }
