--- a/styles/styles.css
+++ b/styles/styles.css
@@ -140,7 +140,7 @@ html, body {
   }
 }
 header {
-  padding: 2rem 5rem;
+  padding: 1rem 5rem;
 }
 header .headersize {
   display: flex;
@@ -314,7 +314,7 @@ html, body {
 }
 
 main {
-  padding: 9rem 5rem 5rem 5rem;
+  padding: 6.5rem 5rem 5rem 5rem;
 }
 main .mainsize {
   padding: 9rem 0rem;
@@ -337,13 +337,15 @@ main .mainsize .textmain h1 span {
 main .mainsize .textmain p {
   margin: 2rem 0rem 3rem 0rem;
   max-width: 70ch;
+  line-height: 1.4;
   font-size: 1.2rem;
   animation: animationTextShow 2.3s forwards;
+  color: #969696;
 }
 main .mainsize .textmain .divmain {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 45px;
   animation: animationTextShow 2.3s forwards;
 }
 main .mainsize .textmain .divmain .seeprojetos {
@@ -464,7 +466,7 @@ header .headersize .menuhamburger.ativo .bar:nth-child(1) {
 .mobileMenuContent .divisorcontent {
   display: flex;
   justify-content: center;
-  gap: 300px;
+  gap: 500px;
   align-items: center;
   padding: 13rem 3rem;
 }
@@ -552,15 +554,6 @@ header .headersize .menuhamburger.ativo .bar:nth-child(1) {
   --stroke-duration: .3s;
   --stroke-easing: cubic-bezier(.3, 1.5, .5, 1);
   --stroke-delay: .195s;
-}
-.mobileMenuContent .divisorcontent .menubg .info {
-  padding-top: 5rem;
-  display: flex;
-  flex-direction: column;
-}
-.mobileMenuContent .divisorcontent .menubg .info p {
-  color: #0b0b0b;
-  max-width: 80ch;
 }
 
 .mobileMenuContent.ativo {
