feat: add padding in body to make a screen

--- a/abstract/_reset.scss
+++ b/abstract/_reset.scss
@@ -17,8 +17,10 @@
   font-size: 1rem;
 }
 
-html, body {
-  background-color: $color-bg;
+body {
+  padding: 10px;
+  border-radius: 15px;
+  background-color: #fff;
 }
 
 .back-to-top {
