--- a/sections/_projetos.scss
+++ b/sections/_projetos.scss
@@ -1,7 +1,8 @@
 @import '../abstract/variables';
 
 #projetos {
-    padding: 0 2rem;
+    background-color: $color-bg;
+    padding: 5rem 2rem 0rem 2rem;
     h1 {
         font-size: 3rem;
         margin-bottom: 2rem;
