--- a/components/_main.scss
+++ b/components/_main.scss
@@ -1,18 +1,20 @@
 @import '../abstract/reset';
 
 main {
-    padding: 6.5rem 5rem 5rem 5rem;
+    background-color: $color-bg;
+    padding: 7rem 5rem 5rem 5rem;
+    height: 90vh;
+    position: relative;
     .mainsize {
         padding: 9rem 0rem;
 
         display: flex;
         align-items: center;
         .textmain {
-            position: relative;
             width: 100%;
             margin-right: 3rem;
             h1 {
-                font-size: 5rem;
+                font-size: 4rem;
                 font-weight: 600;
                 animation: animationTextShow 2s forwards;
                 span {
@@ -40,10 +42,10 @@ main {
                 }
             }
             .textcircle {
-                height: 200px;
+                height: 130px;
                 position: absolute;
-                bottom: -30%;
-                right: 0%;
+                bottom: 3%;
+                right: 3%;
                 animation: rotateAnimation infinite 7s linear;
             }
         }
@@ -57,4 +59,21 @@ main {
     to {
       transform: rotate(360deg);
     }
+  }
+
+
+  @keyframes arrow
+  {
+  0% {opacity:0}
+  40% {opacity:1}
+  80% {opacity:0}
+  100% {opacity:0}
+  }
+  
+  @-webkit-keyframes arrow /*Safari and Chrome*/
+  {
+  0% {opacity:0}
+  40% {opacity:1}
+  80% {opacity:0}
+  100% {opacity:0}
   }
