--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @keyframes animationTextShow {
   0% {
     transform: translate3d(0, 100%, 0);
@@ -49,7 +50,7 @@
 }
 
 body {
-  padding: 10px;
+  padding: 13px;
   border-radius: 15px;
   background-color: #fff;
 }
@@ -73,6 +74,15 @@ body {
 
 .back-to-top.show {
   display: block;
+}
+
+.sectionanima {
+  opacity: 0;
+}
+
+.sectionanima.anima {
+  opacity: 1;
+  animation: animationTextShow 1.5s forwards;
 }
 
 @keyframes animationTextShow {
@@ -149,7 +159,7 @@ header {
 }
 header .headersize {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between; /* Divide o header em três colunas */
   align-items: center;
 }
 header .headersize .titleprofile {
@@ -208,6 +218,21 @@ header .headersize .titleprofile #title .profile h3:hover::after {
 header .headersize .titleprofile #title .profile h3:hover span {
   transform: translate3d(0, 100%, 0);
 }
+header .headersize .menuhamburger {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  padding-right: 7.5rem;
+}
+header .headersize .menuhamburger span {
+  width: 90px;
+  height: 1px;
+  background-color: rgb(212, 212, 212);
+  transition: all 0.3s ease-in-out;
+}
 header .headersize .disponiveltowork {
   display: flex;
   align-items: center;
@@ -219,18 +244,6 @@ header .headersize .disponiveltowork span {
   height: 8px;
   background-color: rgb(0, 131, 0);
   animation: pulse 1s infinite alternate;
-}
-header .headersize .menuhamburger {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  cursor: pointer;
-}
-header .headersize .menuhamburger span {
-  width: 90px;
-  height: 1px;
-  background-color: rgb(212, 212, 212);
-  transition: all 0.3s ease-in-out;
 }
 
 @keyframes pulse {
@@ -294,7 +307,7 @@ header .headersize .menuhamburger span {
 }
 
 body {
-  padding: 10px;
+  padding: 13px;
   border-radius: 15px;
   background-color: #fff;
 }
@@ -318,6 +331,15 @@ body {
 
 .back-to-top.show {
   display: block;
+}
+
+.sectionanima {
+  opacity: 0;
+}
+
+.sectionanima.anima {
+  opacity: 1;
+  animation: animationTextShow 1.5s forwards;
 }
 
 main {
@@ -488,19 +510,19 @@ header .headersize .menuhamburger.ativo .bar:nth-child(1) {
 }
 .mobileMenuContent .divisorcontent {
   display: flex;
-  justify-content: center;
-  gap: 500px;
+  flex-direction: column;
+  gap: 50px;
   align-items: center;
-  padding: 13rem 3rem;
+  padding: 10rem 3rem;
 }
 .mobileMenuContent .divisorcontent nav {
-  text-align: left;
+  text-align: center;
 }
 .mobileMenuContent .divisorcontent nav ul li {
   animation: animationTextShow 2.3s forwards;
 }
 .mobileMenuContent .divisorcontent nav ul li a {
-  font-size: 6rem;
+  font-size: 4rem;
   margin: 15px 0;
   color: #0b0b0b;
 }
@@ -510,7 +532,7 @@ header .headersize .menuhamburger.ativo .bar:nth-child(1) {
 .mobileMenuContent .divisorcontent .menubg {
   color: #0b0b0b;
   animation: animationTextShow 2.3s forwards;
-  text-align: right;
+  text-align: center;
   display: flex;
   flex-direction: column;
   justify-self: flex-end;
@@ -973,4 +995,64 @@ header .headersize .menuhamburger.ativo .bar:nth-child(1) {
   to {
     transform: translate(calc(-50% - 0.5rem));
   }
+}
+@keyframes animationTextShow {
+  0% {
+    transform: translate3d(0, 100%, 0);
+    height: 0;
+    transition: 0.8s all;
+    opacity: 0.2;
+  }
+  20% {
+    opacity: 0.3;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  75% {
+    opacity: 0.8;
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+    transition: 0.8s all;
+    height: 100%;
+    opacity: 1;
+  }
+}
+@keyframes opacityHeadeer {
+  0% {
+    opacity: 0;
+    transition: 0.8s all;
+  }
+  100% {
+    opacity: 1;
+    transition: 0.8s all;
+  }
+}
+#sobre {
+  background-color: #0b0b0b;
+  padding: 5rem 5rem;
+  position: relative;
+}
+#sobre h1 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-family: "Righteous", sans-serif;
+}
+#sobre p {
+  max-width: 75ch;
+  margin: 10px 0;
+}
+#sobre .myphoto {
+  width: 200px;
+  margin: 3rem 0rem;
+  position: absolute;
+  left: 50%;
+  top: 0;
+}
+
+.scrollanima.ativoScroll {
+  animation: animationTextShow 1.8s forwards;
 }/*# sourceMappingURL=styles.css.map */
