feat: section about

--- a/abstract/_reset.scss
+++ b/abstract/_reset.scss
@@ -27,7 +27,7 @@ body {
   display: none;
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  right: 3%;
   background-color: $color-font-white;
   color: $color-bg;
   font-size: 20px;
